--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,6 +13,7 @@ layout: compress
     {% include nav.html %}
     <!-- Header -->
     <header class="header flex" role="banner">
+      <div id="particles-js">
         <div class="container animated fadeIn">
             <div class="row">
                     <a href="{{ site.url }}">
@@ -44,6 +45,7 @@ layout: compress
                  </h3>
             </div>
         </div>
+      </div>
     </header>
     {% include scripts.html %}
 </body>
