--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -6,6 +6,8 @@
     <script src="{{ site.url }}/assets/js/jquery.fitvid.min.js"></script>
     <script src="{{ site.url }}/assets/js/scripts.js"></script>
     <script src="{{ site.url }}/assets/js/particles.min.js"></script>
+    <script src="{{ site.url }}/assets/js/app.js"></script>
+
 
     {% if site.google.analytics %}
     <!-- Asynchronous Google Analytics snippet -->
