--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,7 +12,7 @@ layout: compress
 <body>
     {% include nav.html %}
     <!-- Header -->
-    <div id="particles-js">
+    <div id="particles-js"></div>
     <header class="header flex" role="banner">
         <div class="container animated fadeIn">
             <div class="row">
@@ -46,7 +46,6 @@ layout: compress
             </div>
         </div>
     </header>
-  </div>
     {% include scripts.html %}
 </body>
 </html>
