--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,6 +12,7 @@ layout: compress
 <body>
     {% include nav.html %}
     <!-- Header -->
+    <div id="particles-js"></div>
     <header class="header" role="banner">
         <div class="wrapper animated fadeIn">
             <div class="content">
