--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -29,7 +29,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: #ffffff;
+  background-color: #000000;
   background-image: url("");
   background-repeat: no-repeat;
   background-size: cover;
