--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -42,6 +42,9 @@ layout: compress
                          <a class="btn zoombtn" href="{{ site.url }}/projects">
                          Projects
                          </a>
+                         <a class="btn zoombtn" href="{{ site.url }}/assets/StephanZharkovResume3.pdf">
+                         Resume
+                         </a>
                  </h3>
             </div>
         </div>
