--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,9 +33,9 @@ layout: compress
                     {% include social-links.html %}
                   <hr class="hr-line">
                   <h3 class="title">
-                         <a class="btn zoombtn" href="{{ site.url }}/about">
+<!--                          <a class="btn zoombtn" href="{{ site.url }}/about">
                          About
-                         </a>
+                         </a> -->
                          <a class="btn zoombtn" href="{{ site.url }}/posts">
                          Posts
                          </a>
